<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".productDetail">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle" >

        <ImageButton
            android:id="@+id/back"
            android:paddingStart="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageURL"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/pName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageURL"
        android:text="@string/product_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pName"
        android:text="@string/description_label"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="left"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionLabel"
        android:text="@string/product_description"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:gravity="left"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:text="@string/product_price"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        app:textSize="16dp"
        app:initialNumber="1"
        android:gravity="center"
        android:layout_below="@+id/price"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        app:backGroundColor="@color/orange"
        >

    </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>


    <Button
        android:id="@+id/add_to_cart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_margin="15dp"
        android:layout_alignParentBottom="true"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        android:textSize="18dp"
        />



</RelativeLayout>
